client/stylesheets/popup_menus.css
.popup-screen {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
  z-index: 1001;
  background-color: rgba(0, 0, 0, 0.5);
}

.popup-menu {
  margin: 0 auto;
  margin-top: 100px;
  width: 100%;
  max-width: 640px;
  padding: 20px;
  background-color: white;
  border-radius: 3px;
}

